app/assets/stylesheets/components/_header.scss
.header {
  z-index: 10;
  position: fixed;
  top: 0;
  height: 60px;
  width: 100%;
  background-color: rgba(0,0,0,0.5);
  display: flex;
  justify-content: space-between;
  align-items: center;

  .left-div {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin-left: 40px;
    border: 0;
    width: 30%;

    .logo-img {
      height: 28px;
      cursor: pointer;
    }
  }

  .search {
    font-family: Roboto;

    .search-item {
      cursor: pointer;
    }

    input[type=text] {
      width: 30px;
      height: 30px;
      border: none;
      box-sizing: border-box;
      font-size: 18px;
      background-color: transparent;
      background-image: url("http://res.cloudinary.com/kwokeric/image/upload/v1478235742/search_icon_pys8l1.png");
      background-position: 5px 5px;
      background-size: 20px;
      background-repeat: no-repeat;
      padding-left: 30px;
      padding-top: 2px;
      color: white;
      -webkit-transition: width 0.4s ease-in-out;
      transition: width 0.4s ease-in-out;
      cursor: pointer;

      &:focus {
        width: 50vh;
        border-bottom: 1px solid $celest;
        letter-spacing: 2px;
        outline: 0;
        cursor: default;
      }
    }
  }

  .right-div {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-right: 40px;
    border: 0;
    width: 30%;
  }
}

.logInButton {
  width: 100px;
  height: 30px;
  margin-right: 30px;
  border: 0;
  letter-spacing: 2px;
  font-weight: bold;
  color: black;
  background-color: white;
  border-radius: 3px;
  cursor: pointer;
  transition: 0.3s;

  &:hover {
    background-color: $celest;
  }
}

.dropdown {
  background-color: $darkGray;
  position: absolute;
  width: 140px;
  height: 70px;
  right: 0;
  border-radius: 8px;
  margin-top: 15px;
}

.headerList {
  display: flex;
  height: 50%;
}

.userProfile, .headerLogout {
  padding: 8px 0;
  width: 100%;
  background-color: transparent;
  border: none;
  color: white;
  font-family: Roboto;
  font-size: 12px;
  letter-spacing: 2px;
  cursor: pointer;

  &:hover {
    color: $celest;
    cursor: pointer;
  }
}

.headerLogout {
  border-top: 1px solid $lightGray;
}

.user-display {
  display: flex;
  justify-content: flex-end;
  flex-direction: row;
  align-items: center;
  color: white;
  letter-spacing: 3px;
  font-family: Roboto;
  font-size: 14px;
  font-weight: normal;
  position: relative;

  .thumbnail {
    margin: 0;
    padding: 0;
    height: 30px;
    width: 30px;
    border-radius: 50%;
    box-sizing: border-box;
    cursor: pointer;
  }

  .username {
    padding: 0 20px;
    float: right;
    color: white;
    letter-spacing: 3px;
    font-family: Roboto;
    font-size: 14px;
    text-align: right;
    cursor: pointer;
    text-transform: uppercase;
  }

  .username-hover {
    color: $celest;
    cursor: pointer;
  }

  .icon-div {
    width: 20px;
    height: 20px;
    cursor: pointer;
    background-image: url("http://res.cloudinary.com/kwokeric/image/upload/v1478277518/drop_down_icon_2_rwwzog.png");
    background-size: 20px;

    .icon {
      width: 20px;
      height: 20px;
    }
  }
}

